test/files/pos/t6028/t6028_1.scala
class C {
	def foo(a: Int): Unit = () => a
}
